@@ -1,6 +1,5 @@
 package org.jenkinsci.plugins.gitclient;
 
-import static java.util.stream.Collectors.toList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.anyOf;
 import static org.hamcrest.Matchers.contains;
@@ -13,7 +12,7 @@ import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.is;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.io.FileMatchers.*;
-import static org.junit.Assert.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import hudson.Util;
 import hudson.model.TaskListener;
@@ -21,7 +20,6 @@ import hudson.plugins.git.Branch;
 import hudson.plugins.git.GitException;
 import hudson.util.StreamTaskListener;
 import java.io.File;
-import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -38,52 +36,52 @@ import org.eclipse.jgit.lib.ObjectId;
 import org.eclipse.jgit.transport.RefSpec;
 import org.eclipse.jgit.transport.RemoteConfig;
 import org.eclipse.jgit.transport.URIish;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.junit.runners.Parameterized;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.RegisterExtension;
+import org.junit.jupiter.params.Parameter;
+import org.junit.jupiter.params.ParameterizedClass;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 import org.jvnet.hudson.test.Issue;
 
-@RunWith(Parameterized.class)
-public class GitClientFetchTest {
+@ParameterizedClass(name = "{0}")
+@MethodSource("gitObjects")
+class GitClientFetchTest {
 
-    @Rule
-    public GitClientSampleRepoRule repo = new GitClientSampleRepoRule();
+    @RegisterExtension
+    private final GitClientSampleRepoRule repo = new GitClientSampleRepoRule();
 
-    @Rule
-    public GitClientSampleRepoRule secondRepo = new GitClientSampleRepoRule();
+    @RegisterExtension
+    private final GitClientSampleRepoRule secondRepo = new GitClientSampleRepoRule();
 
-    @Rule
-    public GitClientSampleRepoRule thirdRepo = new GitClientSampleRepoRule();
+    @RegisterExtension
+    private final GitClientSampleRepoRule thirdRepo = new GitClientSampleRepoRule();
 
-    WorkspaceWithRepo workspace;
-    WorkspaceWithRepo bareWorkspace;
-    WorkspaceWithRepo newAreaWorkspace;
+    private WorkspaceWithRepo workspace;
+    private WorkspaceWithRepo bareWorkspace;
+    private WorkspaceWithRepo newAreaWorkspace;
 
     private GitClient testGitClient;
     private File testGitDir;
     private CliGitCommand cliGitCommand;
-    private final String gitImplName;
+
+    @Parameter(0)
+    private String gitImplName;
 
     private final Random random = new Random();
     private LogHandler handler = null;
     private TaskListener listener;
 
-    @Parameterized.Parameters(name = "{0}")
-    public static Collection gitObjects() {
-        List<Object[]> arguments = new ArrayList<>();
+    static List<Arguments> gitObjects() {
+        List<Arguments> arguments = new ArrayList<>();
         String[] gitImplNames = {"git", "jgit", "jgitapache"};
         for (String gitImplName : gitImplNames) {
-            Object[] item = {gitImplName};
+            Arguments item = Arguments.of(gitImplName);
             arguments.add(item);
         }
         return arguments;
-    }
-
-    public GitClientFetchTest(final String gitImplName) {
-        this.gitImplName = gitImplName;
     }
 
     /**
@@ -102,8 +100,8 @@ public class GitClientFetchTest {
      * Git 2.32.0 honors the configuration variable `init.defaultBranch` and uses it for the name of the initial branch.
      * This method reads the global configuration and uses it to set the value of `defaultBranchName`.
      */
-    @BeforeClass
-    public static void computeDefaultBranchName() throws Exception {
+    @BeforeAll
+    static void computeDefaultBranchName() throws Exception {
         File configDir = Files.createTempDirectory("readGitConfig").toFile();
         CliGitCommand getDefaultBranchNameCmd = new CliGitCommand(Git.with(TaskListener.NULL, new hudson.EnvVars())
                 .in(configDir)
@@ -119,8 +117,8 @@ public class GitClientFetchTest {
         assertThat("Failed to delete temporary readGitConfig directory", configDir.delete(), is(true));
     }
 
-    @BeforeClass
-    public static void loadLocalMirror() throws Exception {
+    @BeforeAll
+    static void loadLocalMirror() throws Exception {
         /* Prime the local mirror cache before other tests run */
         /* Allow 2-6 second delay before priming the cache */
         /* Allow other tests a better chance to prime the cache */
@@ -134,8 +132,8 @@ public class GitClientFetchTest {
         Util.deleteRecursive(tempDir);
     }
 
-    @Before
-    public void setUpRepositories() throws Exception {
+    @BeforeEach
+    void setUpRepositories() throws Exception {
         Logger logger = Logger.getLogger(this.getClass().getPackage().getName() + "-" + random.nextInt());
         handler = new LogHandler();
         handler.setLevel(Level.ALL);
@@ -148,16 +146,13 @@ public class GitClientFetchTest {
         testGitClient = workspace.getGitClient();
         testGitDir = workspace.getGitFileDir();
         cliGitCommand = workspace.getCliGitCommand();
-        testGitClient.init();
-        cliGitCommand.run("config", "user.name", "Vojtěch GitClientFetchTest Zweibrücken-Šafařík");
-        cliGitCommand.run("config", "user.email", "email.by.git.client.test@example.com");
-        cliGitCommand.run("config", "--local", "commit.gpgsign", "false");
-        cliGitCommand.run("config", "--local", "tag.gpgSign", "false");
+        workspace.initializeWorkspace(
+                "Vojtěch GitClientFetchTest Zweibrücken-Šafařík", "email.by.git.client.test@example.com");
     }
 
     /* Workspace -> original repo, bareWorkspace -> bare repo and newAreaWorkspace -> newArea repo */
     @Test
-    public void test_fetch() throws Exception {
+    void test_fetch() throws Exception {
         /* Create a working repo containing a commit */
         workspace.touch(testGitDir, "file1", "file1 content " + UUID.randomUUID());
         testGitClient.add("file1");
@@ -220,7 +215,7 @@ public class GitClientFetchTest {
         RefSpec defaultRefSpec = new RefSpec("+refs/heads/*:refs/remotes/origin/*");
         List<RefSpec> refSpecs = new ArrayList<>();
         refSpecs.add(defaultRefSpec);
-        newAreaWorkspace.launchCommand("git", "config", "fetch.prune", "false");
+        newAreaWorkspace.launchCommand("git", "config", "--local", "fetch.prune", "false");
         newAreaWorkspace
                 .getGitClient()
                 .fetch(new URIish(bareWorkspace.getGitFileDir().toString()), refSpecs);
@@ -287,47 +282,23 @@ public class GitClientFetchTest {
                 .getHeadRev(bareWorkspace.getGitFileDir().getAbsolutePath(), defaultBranchName);
         assertThat("bare5 != working5", bareCommit5, is(commit5));
 
-        /* Fetch into newArea repo with null RefSpec - should only
-         * pull tags, not commits in git versions prior to git 1.9.0.
-         * In git 1.9.0, fetch -t pulls tags and versions. */
+        /* Fetch into newArea repo with null RefSpec. */
         newAreaWorkspace.getGitClient().fetch("origin", null, null);
         assertThat(
                 "null refSpec fetch modified local repo",
                 newAreaWorkspace.getGitClient().revParse("HEAD"),
                 is(bareCommit4));
-        ObjectId expectedHead = bareCommit4;
-        if (gitImplName.startsWith("jgit") || workspace.cgit().isAtLeastVersion(1, 9, 0, 0)) {
-            newAreaWorkspace
-                    .getGitClient()
-                    .merge()
-                    .setRevisionToMerge(bareCommit5)
-                    .execute();
-            expectedHead = bareCommit5;
-        } else {
-            GitException gitException = assertThrows(GitException.class, () -> newAreaWorkspace
-                    .getGitClient()
-                    .merge()
-                    .setRevisionToMerge(bareCommit5)
-                    .execute());
-            assertThat(
-                    gitException.getMessage(),
-                    anyOf(
-                            containsString("Could not merge"),
-                            containsString("not something we can merge"),
-                            containsString("does not point to a commit")));
-        }
-        /* Assert that expected change is in repo after merge.  With
-         * git 1.7 and 1.8, it should be bareCommit4.  With git 1.9
-         * and later, it should be bareCommit5. */
+        ObjectId expectedHead = bareCommit5;
+        newAreaWorkspace.getGitClient().merge().setRevisionToMerge(bareCommit5).execute();
         assertThat(
                 "null refSpec fetch modified local repo",
                 newAreaWorkspace.getGitClient().revParse("HEAD"),
-                is(expectedHead));
+                is(bareCommit5));
     }
 
     @Test
     @Issue("JENKINS-19591")
-    public void test_fetch_needs_preceding_prune() throws Exception {
+    void test_fetch_needs_preceding_prune() throws Exception {
         /* Create a working repo containing a commit */
         workspace.touch(testGitDir, "file1", "file1 content " + UUID.randomUUID());
         testGitClient.add("file1");
@@ -421,7 +392,7 @@ public class GitClientFetchTest {
         try {
             /* Fetch parent/a into newArea repo - fails for
              * CliGitAPIImpl, succeeds for JGitAPIImpl */
-            newAreaWorkspace.launchCommand("git", "config", "fetch.prune", "false");
+            newAreaWorkspace.launchCommand("git", "config", "--local", "fetch.prune", "false");
             newAreaWorkspace
                     .getGitClient()
                     .fetch(new URIish(bareWorkspace.getGitFileDir().toString()), refSpecs);
@@ -452,7 +423,7 @@ public class GitClientFetchTest {
     }
 
     @Test
-    public void test_prune_without_remote() {
+    void test_prune_without_remote() {
         /* Prune when a remote is not yet defined */
         String expectedMessage =
                 testGitClient instanceof CliGitAPIImpl ? "returned status code 1" : "The uri was empty or null";
@@ -470,7 +441,7 @@ public class GitClientFetchTest {
      */
     @Test
     @Issue("JENKINS-26197")
-    public void test_fetch_with_prune() throws Exception {
+    void test_fetch_with_prune() throws Exception {
         bareWorkspace = new WorkspaceWithRepo(secondRepo.getRoot(), gitImplName, TaskListener.NULL);
         bareWorkspace.initBareRepo(bareWorkspace.getGitClient(), true);
         /* Create a working repo containing three branches */
@@ -518,7 +489,7 @@ public class GitClientFetchTest {
         List<RefSpec> refSpecs = Collections.singletonList(new RefSpec("+refs/heads/*:refs/remotes/origin/*"));
 
         /* Fetch without prune should leave branch1 in newArea */
-        newAreaWorkspace.launchCommand("git", "config", "fetch.prune", "false");
+        newAreaWorkspace.launchCommand("git", "config", "--local", "fetch.prune", "false");
         newAreaWorkspace
                 .getGitClient()
                 .fetch_()
@@ -545,13 +516,10 @@ public class GitClientFetchTest {
     }
 
     @Test
-    public void test_fetch_from_url() throws Exception {
+    void test_fetch_from_url() throws Exception {
         newAreaWorkspace = new WorkspaceWithRepo(thirdRepo.getRoot(), gitImplName, TaskListener.NULL);
-        newAreaWorkspace.getGitClient().init();
-        newAreaWorkspace.launchCommand("git", "config", "user.name", "Vojtěch fetch from URL Zweibrücken-Šafařík");
-        newAreaWorkspace.launchCommand("git", "config", "user.email", "email.by.git.fetch.test@example.com");
-        newAreaWorkspace.launchCommand("git", "config", "--local", "commit.gpgsign", "false");
-        newAreaWorkspace.launchCommand("git", "config", "--local", "tag.gpgSign", "false");
+        newAreaWorkspace.initializeWorkspace(
+                "Vojtěch fetch from URL Zweibrücken-Šafařík", "email.by.git.fetch.test@example.com");
         newAreaWorkspace.launchCommand("git", "commit", "--allow-empty", "-m", "init");
         String sha1 = newAreaWorkspace.launchCommand("git", "rev-list", "--no-walk", "--max-count=1", "HEAD");
 
@@ -564,7 +532,7 @@ public class GitClientFetchTest {
     }
 
     @Test
-    public void test_fetch_shallow() throws Exception {
+    void test_fetch_shallow() throws Exception {
         testGitClient.setRemoteUrl("origin", workspace.localMirror());
         testGitClient
                 .fetch_()
@@ -600,17 +568,17 @@ public class GitClientFetchTest {
     }
 
     @Test
-    public void test_fetch_shallow_depth() throws Exception {
+    void test_fetch_shallow_depth() throws Exception {
         fetch_shallow_depth(2);
     }
 
     @Test
-    public void test_fetch_shallow_null_depth() throws Exception {
+    void test_fetch_shallow_null_depth() throws Exception {
         fetch_shallow_depth(null);
     }
 
     @Test
-    public void test_fetch_noTags() throws Exception {
+    void test_fetch_noTags() throws Exception {
         testGitClient.setRemoteUrl("origin", workspace.localMirror());
         testGitClient
                 .fetch_()
@@ -630,7 +598,7 @@ public class GitClientFetchTest {
      * creates a branch with a random name. The later assertion checks that
      * the random branch name is not mentioned in a call to git rev-parse.
      */
-    private String checkoutRandomBranch() throws GitException, InterruptedException {
+    private String checkoutRandomBranch() throws Exception {
         String branchName = "rev-parse-branch-" + UUID.randomUUID();
         testGitClient.checkout().ref("origin/master").branch(branchName).execute();
         Set<String> branchNames =
@@ -640,7 +608,7 @@ public class GitClientFetchTest {
     }
 
     @Test
-    public void test_fetch_default_timeout_logging() throws Exception {
+    void test_fetch_default_timeout_logging() throws Exception {
         testGitClient
                 .clone_()
                 .url(workspace.localMirror())
@@ -653,22 +621,14 @@ public class GitClientFetchTest {
     }
 
     private void check_remote_url(WorkspaceWithRepo workspace, GitClient gitClient, final String repositoryName)
-            throws InterruptedException, IOException {
+            throws Exception {
         assertThat("Wrong remote URL", gitClient.getRemoteUrl(repositoryName), is(workspace.localMirror()));
         String remotes = workspace.launchCommand("git", "remote", "-v");
         assertThat("remote URL has not been updated", remotes.contains(workspace.localMirror()), is(true));
     }
 
-    private void assertExceptionMessageContains(GitException ge, String expectedSubstring) {
-        String actual = ge.getMessage().toLowerCase();
-        assertThat(
-                "Expected '" + expectedSubstring + "' exception message, but was: " + actual,
-                actual.contains(expectedSubstring),
-                is(true));
-    }
-
-    private Collection<String> getBranchNames(Collection<Branch> branches) {
-        return branches.stream().map(Branch::getName).collect(toList());
+    private List<String> getBranchNames(Collection<Branch> branches) {
+        return branches.stream().map(Branch::getName).toList();
     }
 
     private void assertBranchesExist(Set<Branch> branches, String... names) {
